// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Profile > matches snapshot in en 1`] = `
<div
  class="page"
>
  <h1>
    Profile 
    <!---->
  </h1>
  <div
    class="toolbar"
  >
    
    
  </div>
  <main
    class="main"
  >
    
    
  </main>
</div>
`;

exports[`Profile > matches snapshot in fr 1`] = `
<div
  class="page"
>
  <h1>
    Profil 
    <!---->
  </h1>
  <div
    class="toolbar"
  >
    
    
  </div>
  <main
    class="main"
  >
    
    
  </main>
</div>
`;
